styling changes for multiple breakpoints v3 - changing hero slogan width to fix on smaller screens

--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@ main {
     position: relative;
 
     div {
-        width: 40%;
+        width: 60%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -287,7 +287,7 @@ main {
     .scrollbar {
 
         div {
-            width: 660px;
+            width: 680px;
         }
     }
 }
