--- a/css/product.css
+++ b/css/product.css
@@ -263,7 +263,7 @@ main {
     .scrollbar {
 
         div {
-            width: 660px;
+            width: 680px;
         }
 
     }
